fix dc code and remove awards on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -1101,6 +1101,10 @@ article li {
         top: 41%;
         left: 91.6%;
     }
+
+    .awards {
+        display: none;
+    }
 }
 /* long */
 @media (min-aspect-ratio: 4/3) {
